# neural_glint

./: .env  .gitignore  .gitmodules  README.md  index.html  requirements.txt  set_env.sh
figures/car/: car.py  run_all.sh
figures/fast_rotation/: gt.py  onfly.py  precomp.py  run_all.sh  scene.py
kernels/: CMakeLists.txt  fast_dot.cu  gxd.cu
kernels/include/: common.h  gxd.cuh  histogram.cuh  sh.cuh  transforms.cuh  utils.h
plugins/: __init__.py  glint.py  gxd_integrator.py  ratio_estimator.py  sh_glint_integrator.py  sh_half_integrator.py
scenes/snail/: data.js
scripts/: build_normalmap_mipmap.py  build_sat.py  create_sh_texture.py  project_bsdf.py  project_envmap.py
scripts/sat_to_nh/: batch_fit.py  fit.py
static/js/: interactive_viewer.js
utils/: agxc.py  denoiser.py  exp.py  fs.py  ior.py  models.py  render.py  sat.py  transforms.py
utils/sh/: __init__.py  base.py  envmap.py  gaussian.py
